# python-project-template

./: README.md  cookiecutter.json
.github/workflows/: release.yml  test-pr.yml
{{cookiecutter.project_slug}}/: Dockerfile  Makefile  README.md  flake.nix  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: test-pr.yml
{{cookiecutter.project_slug}}/nix/: README.md
{{cookiecutter.project_slug}}/nix/{{cookiecutter.project_slug}}/: default.nix
{{cookiecutter.project_slug}}/src/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_slug}}/src/tests/unit/: test_unit.py
